Align shared client content

--- a/src/content/shared/client-pq-implementation.mdx
+++ b/src/content/shared/client-pq-implementation.mdx
@@ -1,10 +1,12 @@
-Both persisted queries and APQs require you to configure code generation and how your client makes requests. If you intend to use persisted queries for safelisting, you also need to generate an operations manifest.
+Both persisted queries and APQs require you to configure your code generation models and how your client makes requests. Because the persisted queries feature requires preregistering trusted operations, it has the additional implementation step of publishing an operations manifest to a persisted queries list (PQL).
 
 We recommend you follow this order while implementing:
 
-1. **For persisted queries only**: Generate and publish operation manifests
-2. **For both persisted queries and APQs**: Configure generated operation models
-3. **For both persisted queries and APQs**: Enable persisted queries on `ApolloClient`
+| Implementation Step | Required for APQs? | Required for PQs? |
+| -----| ------------------ | ----------------- |
+| 1. Configure generated operation models | ✅ | ✅ |
+| 2. Generate and publish operation manifests to a PQL | -- | ✅ |
+| 3. Enable persisted queries on the client when it makes requests | ✅ | ✅ |
 
 The rest of this article details these steps.
 
