--- a/src/content/shared/client-pq-intro.mdx
+++ b/src/content/shared/client-pq-intro.mdx
@@ -1,2 +1,2 @@
 Apollo supports two separate but related features called **automatic persisted queries** (APQs) and **persisted queries**.
-With both features, clients can execute a GraphQL operation by sending an operation's ID instead of the entire operation string. An operation's ID is a hash of the full query string. Querying by ID can significantly reduce latency and bandwidth usage.
+With both features, clients can execute a GraphQL operation by sending an operation's ID instead of the entire operation string. An operation's ID is a hash of the full query string. Querying by ID can significantly reduce latency and bandwidth usage for very large operation strings.
