--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -335,7 +335,7 @@ Here's the JSON body of a request to execute an operation by its ID:
 Apollo's mobile clients let you use the same mechanism for executing persisted queries operations as APQs.
 Refer to their persisted query documentation for implementation details.
 
-- [Apollo iOS](/ios/fetching/peristed-queries/)
+- [Apollo iOS](/ios/fetching/apqs/)
 - [Apollo Kotlin](/kotlin/advanced/persisted-queries/)
 
 The Apollo Client Web requires you to use an [additional package](https://www.npmjs.com/package/@apollo/persisted-query-lists) at runtime to send persisted queries. The Apollo Client Web requires this package because certain aspects of the operation sent at runtime may not match the registered operations without it. Mobile clients have a more deterministic approach to formatting operations and, thus, don't need it.
