--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -281,6 +281,8 @@ See the instructions for your client library:
     - **If the command succeeds,** your manifest is written to `persisted-query-manifest.json`.
     - **If the command fails** (or if your manifest doesn't include all the operations you expect it to), you can configure the command's behavior using the options described in the [package README](https://www.npmjs.com/package/@apollo/generate-persisted-query-manifest).
 
+[See the full Apollo Client persisted queries guide for detailed instructions](/react/api/link/persisted-queries/).
+
 #### Apollo Kotlin
 
 > Manifest generation requires Apollo Kotlin `3.8.2` or later.
@@ -297,12 +299,15 @@ apollo {
 ```
 The manifest will be generated in `build/generated/manifest/apollo/myapi/persistedQueryManifest.json`
 
+[See the full Apollo Kotlin persisted queries guide for detailed instructions](/kotlin/advanced/persisted-queries/).
+
 #### Apollo iOS
 
 > Manifest generation requires Apollo iOS `1.3.1` or later.
 
 To generate an operation manifest with Apollo iOS, you use the same [code generation engine](/ios/code-generation/introduction) that you use to generate Swift code for each of your operations. Specifically, you modify the engine's file output configuration to include the output of an `operationManifest`.
 
+[See the full Apollo iOS persisted queries guide for detailed instructions](/ios/fetching/persisted-queries/).
 
 #### 3.2 Publish manifests to the PQL
 
@@ -335,7 +340,7 @@ Here's the JSON body of a request to execute an operation by its ID:
 Apollo's mobile clients let you use the same mechanism for executing persisted queries operations as APQs.
 Refer to their persisted query documentation for implementation details.
 
-- [Apollo iOS](/ios/fetching/apqs/)
+- [Apollo iOS](/ios/fetching/persisted-queries/)
 - [Apollo Kotlin](/kotlin/advanced/persisted-queries/)
 
 The Apollo Client Web requires you to use an [additional package](https://www.npmjs.com/package/@apollo/persisted-query-lists) at runtime to send persisted queries. The Apollo Client Web requires this package because certain aspects of the operation sent at runtime may not match the registered operations without it. Mobile clients have a more deterministic approach to formatting operations and, thus, don't need it.
