--- a/src/content/shared/client-pq-implementation.mdx
+++ b/src/content/shared/client-pq-implementation.mdx
@@ -8,4 +8,4 @@ We recommend you follow this order while implementing:
 
 The rest of this article details these steps.
 
-Persisted queries also requires you to create and link a PQL, and to configure your router. For more information on the other configuration aspects of persisted queries, see the [GraphOS persisted queries documentation](/graphos/operations/persisted-queries).
+Persisted queries also require you to create and link a PQL, and to configure your router to receive persisted query requests. This document only describes the steps that need to be taken by the client to create a manifest of the client's operations and send persisted query requests. For more information on the other configuration aspects of persisted queries, see the [GraphOS persisted queries documentation](/graphos/operations/persisted-queries).
