--- a/src/content/shared/client-pq-implementation.mdx
+++ b/src/content/shared/client-pq-implementation.mdx
@@ -2,8 +2,8 @@ We recommend you follow this order while implementing:
 
 | Implementation Step | Required for PQs? | Required for APQs? |
 | -----| ------------------ | ----------------- |
-| 1. Generate operation manifest| ✅ | -- |
-| 2. Publish operation manifest to a PQL |✅ | -- |
+| 1. Generate the operation manifest| ✅ | -- |
+| 2. Publish the operation manifest to a PQL |✅ | -- |
 | 3. Enable persisted queries on the client when it makes requests | ✅ | ✅ |
 
 The rest of this article details these steps.
