--- a/src/content/shared/feature-in-preview.mdx
+++ b/src/content/shared/feature-in-preview.mdx
@@ -1,1 +1,1 @@
-> This feature is currently in [preview](/resources/product-launch-stages#preview). Your questions and feedback are highly valued—don’t hesitate to [get in touch](mailto:support@apollographql.com).
+> This feature is currently in [preview](/resources/product-launch-stages#preview). Your questions and feedback are highly valued—don't hesitate to get in touch.
