--- a/src/content/shared/feature-in-preview.mdx
+++ b/src/content/shared/feature-in-preview.mdx
@@ -1,1 +1,1 @@
-> This feature is currently in [preview](/resources/product-launch-stages#preview). Your questions and feedback are highly valued—don't hesitate to get in touch.
+> This feature is currently in [preview](/resources/product-launch-stages#preview). Your questions and feedback are highly valued—don't hesitate to get in touch with your Apollo contact or on the official [Apollo GraphQL Discord](https://discord.gg/graphos).
