--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -59,63 +59,9 @@ Complete the first step of <a href="./cloud/#1-create-your-apollo-account" targe
 
 #### Create a graph in GraphOS Studio
 
-After you create your Apollo account, create your first graph in GraphOS Studio by following the instructions for your organization's [plan type](../org/plans/):
+After you create your Apollo account, create your first graph in GraphOS Studio by follow these steps:
 
-<ExpansionPanel title="Serverless plans">
-
-1. Go to your organization's **Graphs** tab in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
-
-    - **If you see this dialog...**
-
-        <img
-          src="../../img/studio-welcome.jpg"
-          class="screenshot"
-          alt="Welcome message for new Studio orgs"
-          width="350"
-        />
-
-        ...then click **Coming from Apollo Odyssey, or want to connect a self-managed router?**
-
-    - **Otherwise,** find the following notice in the bottom-right corner of the page:
-
-        <img
-          src="../../img/classic-graph-flow.jpg"
-          class="screenshot"
-          alt="Link to classic graph flow"
-          width="300"
-        />
-
-        Click **Head over to our classic graph flow**.
-
-    In either case, Studio displays the following dialog for creating a graph:
-
-    <img
-      className="screenshot"
-      src="../../img/graph-creation.jpg"
-      width="350"
-      style="margin-bottom: 20px;"
-    />
-
-2. Specify an organization and title for your graph.
-
-3. Leave the **Graph Architecture** as **Supergraph (default)**.
-
-4. Click **Next**. A dialog like the following appears:
-
-    <img
-     src="../../img/register-schema-dialog.jpg"
-     class="screenshot"
-     alt="Schema registration options"
-     width="500"
-    />
-
-5. Leave the **Supergraph Pipeline Track** dropdown set to its default value.
-
-Your graph has been created, and it appears in the **Classic Graphs** section of your **Graphs** tab.
-
-</ExpansionPanel>
-
-<ExpansionPanel title="Enterprise and legacy plans">
+<GraphOSEnterpriseRequired />
 
 1. Go to your organization's **Graphs** tab in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
 
@@ -130,7 +76,7 @@ Your graph has been created, and it appears in the **Classic Graphs** section of
 
 3. Specify an organization and title for your graph.
 
-3. Leave the **Graph Architecture** as **Supergraph (default)**.
+4. Leave the **Graph Architecture** as **Supergraph (default)**.
 
 5. Click **Next**. A dialog like the following appears:
 
@@ -144,8 +90,6 @@ Your graph has been created, and it appears in the **Classic Graphs** section of
 6. Leave the **Supergraph Pipeline Track** dropdown set to its default value.
 
 Your graph has been created.
-
-</ExpansionPanel>
 
 #### Install the Rover CLI
 
