--- a/src/content/graphos/basics/routing/self-hosted.mdx
+++ b/src/content/graphos/basics/routing/self-hosted.mdx
@@ -34,67 +34,7 @@ With the exception of Apollo-managed routing, self-hosted supergraphs benefit fr
 
 ## Creating a self-hosted supergraph
 
-> If your organization _doesn't_ currently have an Enterprise plan, you can test out this functionality by signing up for a free [Enterprise trial](../org/plans/#enterprise-trials).
-
-See the instructions for your organization's [plan type](../org/plans/):
-
-> If you just created your organization as part of creating your account, it's on a **Serverless** plan type.
-
-<ExpansionPanel title="Serverless plans">
-
-1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/).
-
-   - **If you see this dialog...**
-
-     <img
-       src="../../img/studio-welcome.jpg"
-       className="screenshot"
-       alt="Welcome message for new Studio orgs"
-       width="350"
-     />
-
-     ...then click **Coming from Apollo Odyssey, or want to connect a self-managed router?**
-
-   - **Otherwise,** find the following notice in the bottom-right corner of the page:
-
-     <img
-       src="../../img/classic-graph-flow.jpg"
-       className="screenshot"
-       alt="Link to classic graph flow"
-       width="300"
-     />
-
-     Click **Head over to our classic graph flow**.
-
-   In either case, Studio displays the following dialog for creating a graph:
-
-   <img
-     className="screenshot"
-     src="../../img/graph-creation.jpg"
-     width="350"
-     style="margin-bottom: 20px;"
-   />
-
-2. Specify an organization and title for your graph.
-
-3. Leave the **Graph Architecture** as **Supergraph (default)**.
-
-4. Click **Next**. A dialog like the following appears:
-
-   <img
-     src="../../img/register-schema-dialog.jpg"
-     className="screenshot"
-     alt="Schema registration options"
-     width="500"
-   />
-
-5. Leave the **Supergraph Pipeline Track** dropdown set to its default value.
-
-Your graph has been created, and it appears in the **Classic Graphs** section of your **Graphs** tab.
-
-</ExpansionPanel>
-
-<ExpansionPanel title="Enterprise and legacy plans">
+<GraphOSEnterpriseRequired />
 
 1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/).
 
@@ -123,7 +63,5 @@ Your graph has been created, and it appears in the **Classic Graphs** section of
 6. Leave the **Supergraph Pipeline Track** dropdown set to its default value.
 
 Your graph has been created.
-
-</ExpansionPanel>
 
 For more information, see [Setting up a self-hosted supergraph](../quickstart/self-hosted/).
