--- a/src/content/graphos/basics/routing/self-hosted.mdx
+++ b/src/content/graphos/basics/routing/self-hosted.mdx
@@ -5,9 +5,9 @@ description: Host your supergraph's router in your own infrastructure
 
 > ⚠️ **Important:** If you're just getting started with GraphOS, instead [create a cloud supergraph](../quickstart/cloud/).
 >
-> Self-hosted supergraphs are for organizations with advanced performance or compliance requirements. Connecting them to GraphOS requires an [Enterprise plan](/graphos/enterprise/).
+> **Self-hosted supergraphs are an [Enterprise feature](/graphos/enterprise/)** for organizations with advanced performance or compliance requirements.
 >
-> If your organization might benefit from the expanded features of an [Enterprise plan](https://www.apollographql.com/pricing/), please [get in touch with us!](https://www.apollographql.com/contact-sales/)
+> If your organization might benefit from [Enterprise features](../enterprise/), please [get in touch with us!](https://www.apollographql.com/contact-sales/)
 
 Some organizations with advanced requirements need to host every part of their supergraph in their own infrastructure, _including_ the supergraph's router:
 
@@ -34,34 +34,4 @@ With the exception of Apollo-managed routing, self-hosted supergraphs benefit fr
 
 ## Creating a self-hosted supergraph
 
-<GraphOSEnterpriseRequired />
-
-1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/).
-
-2. Click **New Graph** in the top right. Studio displays the following dialog:
-
-   <img
-     className="screenshot"
-     src="../../img/graph-creation.jpg"
-     width="350"
-     style="margin-bottom: 20px;"
-   />
-
-3. Specify an organization and title for your graph.
-
-4. Leave the **Graph Architecture** as **Supergraph (default)**.
-
-5. Click **Next**. A dialog like the following appears:
-
-   <img
-     src="../../img/register-schema-dialog.jpg"
-     className="screenshot"
-     alt="Schema registration options"
-     width="500"
-   />
-
-6. Leave the **Supergraph Pipeline Track** dropdown set to its default value.
-
-Your graph has been created.
-
-For more information, see [Setting up a self-hosted supergraph](../quickstart/self-hosted/).
+<CreateSelfHostedSupergraph />
