--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -137,7 +137,9 @@ Even if your API currently uses only _one_ GraphQL server, a cloud supergraph he
 
 ### Self-hosted supergraphs
 
-> ⚠️ **Self-hosted supergraphs are a feature of Enterprise plans.** If you need to host your supergraph's router in your own infrastructure, please [contact us](https://www.apollographql.com/contact-sales/).
+> **Self-hosted supergraphs are an [Enterprise feature](/graphos/enterprise/)** for organizations with advanced performance or compliance requirements.
+>
+> If your organization might benefit from [Enterprise features](../enterprise/), please [get in touch with us!](https://www.apollographql.com/contact-sales/)
 
 With a self-hosted supergraph, GraphOS does _not_ provision a router for your supergraph. Instead, you host your supergraph's router in your own infrastructure:
 
