--- a/src/content/shared/create-self-hosted-supergraph.mdx
+++ b/src/content/shared/create-self-hosted-supergraph.mdx
@@ -2,12 +2,12 @@
 
 2. Click **New Graph** in the top right. Studio displays the following dialog:
 
-   <img
-     className="screenshot"
-     src="/decb8a9c3c8a6d96a8a711ce49e4ec8d/graph-creation.jpg"
-     width="350"
-     style="margin-bottom: 20px;"
-   />
+<img
+  className="screenshot"
+  src="../graphos/img/graph-creation.jpg"
+  width="350"
+  style="margin-bottom: 20px;"
+/>
 
 3. Specify an organization and title for your graph.
 
@@ -15,11 +15,11 @@
 
 5. Click **Next**. A dialog like the following appears:
 
-   <img
-     src="/e00d9adacfce9970892900837c73bbb7/register-schema-dialog.jpg"
-     alt="Schema registration options"
-     width="500"
-   />
+<img
+  src="../graphos/img/register-schema-dialog.jpg"
+  alt="Schema registration options"
+  width="500"
+/>
 
 6. Leave the **Supergraph Pipeline Track** dropdown set to its default value.
 
